fixed bug in CurrentUserContext. Add Styling to Login. Added Checkbox to toggle Password visibility. Updated Fontawesome icons

--- a/frontend/src/styles/partials/_PostsPage.scss
+++ b/frontend/src/styles/partials/_PostsPage.scss
@@ -5,14 +5,35 @@
     margin-bottom: 16px;
   }
   
-  .SearchIcon {
-    position: absolute;
-    font-size: 1.2rem;
-    padding: 9px;
-    padding-left: 15px;
-  }
+.SearchIcon {
+  position: absolute;
+  font-size: 1.2rem;
+  padding: 9px;
+  padding-left: 15px;
+}
+
+.SearchIcon:hover {
+  cursor: default;
+  color: #cfced3;
+}
+
+.Icons {
+  color: var(--text-color);
   
-  .SearchIcon:hover {
-    cursor: default;
-    color: #cfced3;
-  }
+}
+
+.Icons:hover {
+  color: var(--primary-color);
+}
+
+.red {
+  color: red;
+} 
+
+.inactive-bookmark {
+  color: var(--text-color); /* Farbe für inaktives Lesezeichen */
+}
+
+.active-bookmark {
+  color: orange; /* Farbe für aktives Lesezeichen */
+}
