--- a/frontend/src/styles/partials/_login.scss
+++ b/frontend/src/styles/partials/_login.scss
@@ -10,7 +10,7 @@
     text-align: center;
     margin-bottom: 20px;
     }
-
+    
     form {
         display: flex;
         flex-direction: column;
@@ -25,8 +25,32 @@
         border: 1px solid #ccc;
         border-radius: 4px;
     }
+
+    .password-checkbox {
+        display: flex;
+        justify-content: center;
+        align-items: baseline;
+        gap: 1em;
+    }
+
+    input:invalid {
+        animation: shake 0.5s;
+    }
+    @keyframes shake {
+        0%, 100% {transform: translateX(0); }
+        25% { transform: translateX(-10px);}
+        75% { transform: translateX(10px);}
+        }
     }
 }
+.alert{
+    text-align: center;
+    padding-bottom: 10px;
+    font-weight: bold;
+    color: red;
+    animation: shake 0.5s;
+}
+
 .signin {
     text-align: center;
     margin-top: 10px;   
@@ -34,4 +58,7 @@
     p {
         padding-bottom: 1em;
     }
+}
+h2:first-letter{
+    color: var(--primary-color);
 }
